--- a/Fruit_detection.ipynb
+++ b/Fruit_detection.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fruit Detection with python"
+    "# Fruit Detection with Machine Learning (Python)"
    ]
   },
   {
